syntax = "proto3";
package anytype;
option go_package = "pb";

message ThreadHeader {
  string firstChangeId = 1;
  bool isWorkspace = 2;
}